Prevent ios autozoom

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+</head>
 <html>
    <head>
       <title>Fitts' law experiment</title>
@@ -8,6 +11,6 @@
    </head>
    <body>
       <canvas id="canvas"></canvas>
-      <input class="button" id="continueExp" value="Continue"/>
+      <input class="button" id="continueExp" value="Continue" readonly="true"/>
    </body>
 </html>
